--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "sinon": "^1.17.4"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1"
-  }
+    "browserify": "^13.0.1",
+    "gulp": "^3.9.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "license": "MIT"
 }
