--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "request.js"
   ],
   "moduleType": [
-    "amd"
+    "globals",
+    "es6"
   ],
   "keywords": [
     "async",
@@ -18,7 +19,6 @@
   ],
   "license": "MIT",
   "ignore": [
-    "bower_components",
     "node_modules"
   ],
   "private": false
