--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "request",
   "description": "simple class wrapper around XmlHttpRequest, for async js request or Ajax",
-  "devDependencies": {
-    "gulp-mocha": "^2.2.0",
-    "mocha": "^2.5.3",
-    "should": "^9.0.2",
-    "sinon": "^1.17.4"
-  },
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
+    "pump": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp-mocha": "^3.0.0",
+    "should": "^11.0.0",
+    "sinon": "^1.17.5"
+  }
 }
