--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "request",
   "description": "simple class wrapper around XmlHttpRequest, for async js request or Ajax",
   "dependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-node": "^6.1.1",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
+    "browserify": "^14.0.1",
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
-    "pump": "^1.0.1",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.0.1",
+    "pump": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "gulp-mocha": "^3.0.0",
-    "should": "^11.0.0",
-    "sinon": "^1.17.5"
+    "gulp-mocha": "^4.0.1",
+    "should": "^11.2.0",
+    "sinon": "^1.17.7"
   }
 }
