--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "request",
   "description": "simple class wrapper around XmlHttpRequest, for async js request or Ajax",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-node": "^6.1.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.0.1",
+    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^2.1.2",
     "pump": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
